--- a/README
+++ b/README
@@ -1,1 +1,8 @@
-This file was created by IntelliJ IDEA 11.1.3 for binding GitHub repository
+
+======================================== MyMusic ========================================
+
+  project that manages the music librari from amarok database
+  
+  tools : GWT, Spring ...
+  
+  coming soon ...
